# news-interview

./: .gitignore  Dockerfile  README.md  database.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
parser/: mosday.py  news.html  news_parser.py
schemas/: news_schemas.py
services/: services.py
